...
  void _showCreateFolderDialog() {
    final controller = TextEditingController();

    showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: const Text('Create Folder'),
        content: TextField(
          controller: controller,
          decoration: const InputDecoration(
            labelText: 'Folder Name',
            border: OutlineInputBorder(),
          ),
...
                  folder: folder,
                ));
              }

              context.pop();
            },
            child: const Text('Create'),
          ),
        ],
      ),
    );
  }

...
